new(reportes): Requests pendientes y completos se mueven a diferentes vistas.

--- a/public/reportes.html
+++ b/public/reportes.html
@@ -59,12 +59,12 @@
             Historial de activos
           </button>
           <button
-          type="button"
-          class="buttons"
-          onclick="window.location.href='historialTraslados.html'"
-        >
-          Historial de traslados
-        </button>
+            type="button"
+            class="buttons"
+            onclick="window.location.href='historialTraslados.html'"
+          >
+            Historial de traslados
+          </button>
           <button
             type="button"
             class="buttons"
@@ -73,22 +73,25 @@
             Historial de Sede
           </button>
           <button
-          type="button"
-          class="buttons"
-          onclick="window.location.href='historialUsuario.html'">
-          Historial de Usuarios
+            type="button"
+            class="buttons"
+            onclick="window.location.href='historialUsuario.html'"
+          >
+            Historial de Usuarios
           </button>
           <button
-          type="button"
-          class="buttons"
-          onclick="window.location.href='historialDonaciones.html'">
-          Historial de Donaciones
+            type="button"
+            class="buttons"
+            onclick="window.location.href='historialDonaciones.html'"
+          >
+            Historial de Donaciones
           </button>
           <button
-          type="button"
-          class="buttons"
-          onclick="window.location.href='historialBodega.html'">
-          Historial de Bodega
+            type="button"
+            class="buttons"
+            onclick="window.location.href='historialBodega.html'"
+          >
+            Historial de Bodega
           </button>
         </div>
       </div>
@@ -113,5 +116,6 @@
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
+    <script src="js/Controllers/reportesController.js"></script>
   </body>
 </html>
