--- a/public/historialTraslados.html
+++ b/public/historialTraslados.html
@@ -50,37 +50,21 @@
       <h2 class="subtitles">Historial de Traslados</h2>
       <br />
       <div>
-        <div>
-          <label for="selecOpcion">Filtrar por:</label>
-          <select class="buscador" id="selecOpcion">
-            <option value="">--Selecione una opción--</option>
-            <option value="idTraslado">ID de traslado</option>
-            <option value="idActivo">ID de activo</option>
-            <option value="usuarioSolicitante">Usuario solicitante</option>
-            <option value="sede">Sede</option>
-            <option value="estado">Estado</option>
-            <option value="codigo">Código</option>
-            <option value="razon">Razón de traslado</option>
-          </select>
-        </div>
         <div class="inputs">
-          <label for="txtBuscar">Parámetros de búsqueda</label>
+          <label for="txtBuscar">Filtrar:</label>
           <input type="text" class="buscador" id="txtBuscar" />
         </div>
-        <div class="botonBuscar">
-          <button type="button" class="buttons">Buscar</button>
-        </div>
       </div>
-      <table id="tableHistorialTraslados">
+      <table id="transfers">
         <thead>
           <tr>
-            <th>ID de traslado</th>
-            <th>ID de activo</th>
-            <th>Usuario solicitante</th>
-            <th>Sede</th>
-            <th>Estado</th>
-            <th>Código</th>
-            <th>Razón de traslado</th>
+            <th>ID de la solicitud</th>
+            <th>ID del Activo afectado</th>
+            <th>Razon de traslado</th>
+            <th>Imagenes</th>
+            <th>Fecha de creacion</th>
+            <th>Solicitante</th>
+            <th>Estado de solicitud</th>
           </tr>
         </thead>
         <tbody id="table-body"></tbody>
@@ -106,5 +90,6 @@
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
+    <script src="js/Controllers/historialTraslados.js"></script>
   </body>
 </html>
