--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -52,7 +52,7 @@
         </button>
       </div>
       <div class="container profile-img">
-        <h2 class="subtitles">Imagen de perfil</h2>
+        <h2 class="subtitles">Imágen de perfil</h2>
         <div>
           <img id="imgUser" class="avatar" />
         </div>
@@ -65,7 +65,7 @@
         </button>
       </div>
       <div class="container info">
-        <h2 class="subtitles">Informacion del usuario</h2>
+        <h2 class="subtitles">Información del usuario</h2>
         <div class="inputs hidden">
           <label for="mongoId">_id</label>
           <input type="text" id="mongoId" />
