--- a/public/estadoTrasladoAdmin.html
+++ b/public/estadoTrasladoAdmin.html
@@ -53,9 +53,6 @@
           <label for="txtNombreActivo">Nombre o ID de activo</label>
           <input type="text" class="buscador" id="txtNombreActivo" />
         </div>
-        <div class="botonBuscar">
-          <button type="button" class="buttons">Buscar</button>
-        </div>
       </div>
 
       <table id="transfers">
@@ -63,9 +60,9 @@
           <tr>
             <th>ID de la solicitud</th>
             <th>ID del Activo afectado</th>
-            <th>Razon de traslado</th>
-            <th>Imagenes</th>
-            <th>Fecha de creacion</th>
+            <th>Razón de traslado</th>
+            <th>Imágenes</th>
+            <th>Fecha de creación</th>
             <th>Solicitante</th>
             <th>Estado de solicitud</th>
             <th>Acciones</th>
