--- a/public/landPageBotWeb.html
+++ b/public/landPageBotWeb.html
@@ -118,7 +118,7 @@
                 para <a href="">ProveGuard</a> una empresa la cual ofrece servicios para el desarrollo social. </p>
 
 
-            <!--AQUÍ Adjuntar imagen referente de SICA -->
+            <!--AQUÍ Adjuntar imágen referente de SICA -->
         </div>
     </main>
 
