--- a/public/landPageProveGuard.html
+++ b/public/landPageProveGuard.html
@@ -41,7 +41,7 @@
             <div>
                 <h3>Misión</h3>
                 <p class="texto"> Nos centramos que en promover una sociedad más equitativa y sustentable, 
-                    enfoncandonos en brindar oportunidades profesionales, promoviend la salud, y otros servicios 
+                    enfoncandonos en brindar oportunidades profesionales, promoviendo la salud, y otros servicios 
                     para comunidades de bajos recursos. 
                 </p>
             </div>
