--- a/public/users.html
+++ b/public/users.html
@@ -117,7 +117,7 @@
             </select>
           </div>
           <div class="inputs profile-image">
-            <label for="profilePic">Seleccionar imagen de perfil:</label>
+            <label for="profilePic">Seleccionar imágen de perfil:</label>
             <img src="" alt="" id="inputImgProfile" class="avatar">
             <div>
               <button type="button" class="buttons" onclick="AbrirCloudinary('inputImgProfile')">Subir foto</button>
