--- a/public/estadoDeRegistro.html
+++ b/public/estadoDeRegistro.html
@@ -51,11 +51,8 @@
       <br />
       <div>
         <div class="inputs">
-          <label for="txtBuscarActivo">Nombre o ID de activo</label>
+          <label for="txtBuscarActivo">Filtrar:</label>
           <input type="text" class="buscador" id="txtBuscarActivo" />
-        </div>
-        <div class="botonBuscar">
-          <button type="button" class="buttons">Buscar</button>
         </div>
       </div>
       <table id="tableSolicActivos">
@@ -64,9 +61,9 @@
             <th>ID del activo</th>
             <th>Nombre</th>
             <th>Unidad</th>
-            <th>Ubicacion</th>
-            <th>Codigo Ubicacion</th>
-            <th>Descripcion</th>
+            <th>Ubicación</th>
+            <th>Codigo Ubicación</th>
+            <th>Descripción</th>
             <th>Usuario solicitante</th>
             <th>Fecha</th>
             <th>Estado</th>
