--- a/public/historialActivos.html
+++ b/public/historialActivos.html
@@ -61,9 +61,9 @@
             <th>ID del activo</th>
             <th>Nombre</th>
             <th>Unidad</th>
-            <th>Ubicacion</th>
-            <th>Codigo Ubicacion</th>
-            <th>Descripcion</th>
+            <th>Ubicación</th>
+            <th>Codigo Ubicación</th>
+            <th>Descripción</th>
             <th>Usuario solicitante</th>
             <th>Fecha</th>
             <th>Estado</th>
