Registro de sedes

--- a/public/formTransferAdmin.html
+++ b/public/formTransferAdmin.html
@@ -37,9 +37,9 @@
   </header>
 
   <main>
-    <div class="center-container" />
+    <div class="center-container">
 
-    <form action="">
+    <form class="formTransfer">
       <h3 class="subtitles">TRASLADO DE ACTIVO</h3>
       <div class="row">
         <div class="column">
@@ -111,7 +111,7 @@
           <label for="foto">*Agregue dos fotos como mínimo del activo</label>
         </div>
       </div>
-      <div>
+      <div class="contenedorBotones">
         <button class="buttons" type="button" id="btnSubmit" onclick="Trasladar()">Realizar Traslado</button>
         <button class="buttons" type="button">Eliminar</button>
       </div>
@@ -127,12 +127,12 @@
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
-      <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
+      <h2><a href="landPageProveGuard.html">BotWeb Team</a></h2>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Contacto</a></li>
-      <li><a href="#">Sedes</a></li>
-      <li><a href="#">Ayuda</a></li>
+      <li><a href="landpageBotweb.html">Contacto</a></li>
+      <li><a href="sede.html">Sedes</a></li>
+      <li><a href="landpageBotweb.html">Ayuda</a></li>
     </ul>
   </footer>
 
