--- a/public/sede.html
+++ b/public/sede.html
@@ -46,7 +46,7 @@
     <div class="page-buttons">
       <div class="inputs">
         <button type="button" id="edit" class="buttons">Editar</button>
-        <button type="button" id="add" class="buttons">Editar/Agregar Sede</button>
+        <button type="button" id="add" class="buttons">Agregar Sede</button>
       </div>
       <div class="inputs">
         <label for="filter">Filtrar</label>
@@ -63,10 +63,7 @@
           <th>Nombre de sede</th>
           <th>Descripción</th>
           <th>Fecha de creación</th>
-          <!--Será necesesario agregar la Foto de sede?-->
-          <th>Foto de sede</th>
           <th>Ubicación</th>
-          <th>Código de Ubicación</th>
           <th>Acciones</th>
         </tr>
       </thead>
@@ -77,36 +74,33 @@
     <div id="popup" class="popup">
       <form class="addCampus">
         <div class="popup-header">
-          <h2 class="subtitles">Editar/Agregar Sede</h2>
+          <h2 id="title_popup" class="subtitles">Editar/Agregar Sede</h2>
           <button class="close-button" onclick="closePopup()">&#10006</button>
         </div>
 
         <div class="popup-body">
           <div class="inputs">
-            <label for="txtIDSede">ID de Sede</label>
-            <input type="text" id="txtIDSede">
-          </div><div class="inputs">
             <label for="txtNombreSede">Nombre de Sede</label>
             <input type="text" id="txtNombreSede">
           </div>
-          </div><div class="inputs">
+          </div>
+          <div class="inputs">
             <label for="txtDescripcionSede">Descripción</label>
             <textarea type="text" id="txtDescripcionSede"></textarea>
           </div>
           <div class="inputs">
             <label for="txtDate">Fecha de creación</label>
-            <input type="date" id="txtDate" />
+            <input type="date" id="txtDate" min="1920-01-01" />
           </div>
           <div class="inputs">
             <label for="txtUbicacionSede">Ubicación</label>
-            <input type="text" id="txtUbicacionSede">
+            <textarea type="text" id="txtUbicacionSede" placeholder="Indicar la ubicación con provincia, cantón, distrito y seña"></textarea>
           </div>
-          <div class="inputs sede-image">
+          <!-- <div class="inputs sede-image">
             <label for="sedePic">Seleccionar imagen de sede:</label>
             <input type="file" id="sedePic">
-          </div>
-          <!--Agregar función de agregar sede-->
-          <button type="button" class="buttons" onclick="AddCampus()">Agregar</button>
+          </div> -->
+          <button type="button" class="buttons" id="btnAction_popup">Agregar</button>
           <button type="button" class="buttons" onclick="closePopup()">Cancelar</button> 
         </div>
       </form>
@@ -136,8 +130,8 @@
   <script src="js/utils.js"></script>
   <script src="js/Services/generalService.js"></script>
   <script src="js/Controllers/sessionController.js"></script>
-  <script src="js/Controllers/sedeController.js">
-  </script>  <script src="js/Controllers/usersController.js"></script>
+  <script src="js/Controllers/sedeController.js"></script>  
+  <!-- <script src="js/Controllers/usersController.js"></script> -->
 
 </body>
 </html>
