fix(bitacora): Se corrige html de bitacora

--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -79,145 +79,13 @@
         <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
       </div>
       <ul class="nav-links">
-        <li><a href="registroDeActivosAdmin.html">Registro / Edición de activos</a></li>
-        <li><a href="transferIncomeAdmin.html">Traslados</a></li>
-        <li><a href="bitacora.html">Bitácora</a></li>
-        <li><a href="reportes.html">Reportes</a></li>
-        <li><a href="users.html">Manejo de usuarios</a></li>
+        <li><a href="landpageBotweb.html">Contacto</a></li>
+        <li><a href="sede.html">Sedes</a></li>
+        <li><a href="landpageBotweb.html">Ayuda</a></li>
       </ul>
-    </nav>
-    <div class="left-nav">
-      <div id="user-icon" class="logo user-icon" title="Perfil">
-        <img src="img/user-icon.png" alt="user-icon" />
-      </div>
-      <button type="button" class="buttons" onclick="Logout()">
-        Cerrar Sesión
-      </button>
-    </div>
-  </header>
-
-  <main>
-
-    <div class="inputs">
-      <h1 class="subtitles">Bitácora</h1>
-    </div>
-    <div class="page-buttons">
-      <!-- <button type="button" class="buttons" id="btnActivo" onclick="AbrirFormulario()">Registrar Bitacora</button> -->
-    </div>
-    <div class="inputs">
-      <label for="filter">Filtrar</label>
-      <input type="text" id="filter">
-      <button type="button" id="cancel" class="buttons">Cancelar</button>
-    </div>
-    <table >
-      <thead>
-        <tr>
-          <th>Id</th>
-          <th>Activo</th>
-          <th>Localización</th>
-          <th>Fecha</th>
-        </tr>
-      </thead>
-      <tbody id="table-body"></tbody>
-    </table>
-
-    <!-- <div id="miModal" class="modal">
-      <div class="modalContent">
-        <span class="close">&times;</span>
-        <form action="">
-          <div class="inputLabel">
-            <div class="titulo">
-              <h2 class="subtitles">Datos de Traslado</h2>
-            </div>
-            <div class="empleado">
-              <label for="txtEmpleado" id="lblNombre">Nombre Del Empleado</label>
-              <input type="text" id="txtEmpleado"> <br>
-            </div>
-            <div class="localizacion">
-              <label for="txtLocalizacion" id="lblLocalizacion">Localización</label>
-              <input type="text" id="txtLocalizacion"><br>
-            </div>
-            <div class="activo">
-              <label for="txtActivo" id="lblActivo">ID de Activo</label>
-              <input type="text" id="txtActivo"><br>
-            </div>
-            <div class="fecha">
-              <label for="txtFecha" id="lblTraslado">Fecha del traslado</label>
-              <input type="date" id="txtFecha"><br>
-            </div>
-            <div class="respon">
-              <label for="txtRespon" id="lblRespon">Responsable de aceptar o denegar el
-                traslado</label>
-              <input type="text" id="txtRespon"><br>
-            </div>
-            <div class="titulo">
-              <h2 class="subtitles">Extras del traslado</h2>
-            </div>
-            <div class="extra">
-              <label for="txtExtra" id="lblExtras">Extras del traslado</label>
-              <input type="text" id="txtExtra"><br>
-            </div>
-            <div class="donalmacen">
-              <label for="txtEstado" id="lblElec">¿Será almacenado o donado?</label>
-              <select name="" id="txtEstado">
-                <option value="1" checked>Donación</option>
-                <option value="0">almacenado</option>
-              </select>
-            </div>
-            <div class="origen">
-              <label for="txtOrigin" id="lblOrigen">lugar de origin del activo</label>
-              <input type="text" id="txtOrigin"><br>
-            </div>
-            <input type="button" id="btnRegistrar" value="Registrar" class="buttons" />
-          </div>
-      </div>
-    </div>
-    </form>
-
-
-    <div class="inputs">
-      <h1 class="subtitles">Bitacora</h1>
-    </div>
-    <div class="page-buttons">
-      <button type="button" class="buttons" id="btnActivo" onclick="AbrirFormulario()">Registrar Bitacora</button>
-    </div>
-    <div class="inputs">
-      <label for="txtFiltrar">Filtrar</label>
-      <input type="text" id="txtFiltrar">
-    </div>
-    <table>
-      <thead>
-        <tr>
-          <th>Id</th>
-          <th>Activo</th>
-          <th>Localización</th>
-          <th>Fecha</th>
-        </tr>
-      </thead>
-      <tbody id="table-body"></tbody>
-    </table> -->
-  </main>
-
-  <footer class="footer">
-    <div class="company-name">
-      <h2><a href="landPageProveGuard.html">ProveGuard &copy;2023</a></h2>
-    </div>
-    <div class="copyright">
-      <h2>SICA - Sistema de Control de Activos</h2>
-      <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
-    </div>
-    <ul class="nav-links">
-      <li><a href="landpageBotweb.html">Contacto</a></li>
-      <li><a href="sede.html">Sedes</a></li>
-      <li><a href="landpageBotweb.html">Ayuda</a></li>
-    </ul>
-  </footer>
-
-  <script src=" https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="js/Services/generalService.js"></script>
-  <script src="js/Controllers/bitacoraController.js"></script>
-  <script src="js/utils.js"></script>
-</body>
+    </footer>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
