--- a/public/sede.html
+++ b/public/sede.html
@@ -83,27 +83,20 @@
             <label for="txtNombreSede">Nombre de Sede</label>
             <input type="text" id="txtNombreSede">
           </div>
-          </div>
-          <div class="inputs">
-            <label for="txtDescripcionSede">Descripción</label>
-            <textarea type="text" id="txtDescripcionSede"></textarea>
-          </div>
-          <div class="inputs">
-            <label for="txtDate">Fecha de creación</label>
-            <input type="date" id="txtDate" min="1920-01-01" />
-          </div>
-          <div class="inputs">
-            <label for="txtUbicacionSede">Ubicación</label>
-            <textarea type="text" id="txtUbicacionSede" placeholder="Indicar la ubicación con provincia, cantón, distrito y seña"></textarea>
-          </div>
-          <!-- <div class="inputs sede-image">
-            <label for="sedePic">Seleccionar imagen de sede:</label>
-            <input type="file" id="sedePic">
-          </div> -->
-          <button type="button" class="buttons" id="btnAction_popup">Agregar</button>
-          <button type="button" class="buttons" onclick="closePopup()">Cancelar</button> 
         </div>
-      </form>
+        <div class="inputs">
+          <label for="txtDescripcionSede">Descripción</label>
+          <textarea type="text" id="txtDescripcionSede"></textarea>
+        </div>
+        <div class="inputs">
+          <label for="txtUbicacionSede">Ubicación</label>
+          <textarea type="text" id="txtUbicacionSede"
+            placeholder="Indicar la ubicación con provincia, cantón, distrito y seña"></textarea>
+        </div>
+        <button type="button" class="buttons" id="btnAction_popup">Agregar</button>
+        <button type="button" class="buttons" onclick="closePopup()">Cancelar</button>
+    </div>
+    </form>
     </div>
 
 
@@ -130,8 +123,9 @@
   <script src="js/utils.js"></script>
   <script src="js/Services/generalService.js"></script>
   <script src="js/Controllers/sessionController.js"></script>
-  <script src="js/Controllers/sedeController.js"></script>  
+  <script src="js/Controllers/sedeController.js"></script>
   <!-- <script src="js/Controllers/usersController.js"></script> -->
 
 </body>
+
 </html>
