fix(historiaSedes): Se agrega la tabla para el historial

--- a/public/historialUnidad.html
+++ b/public/historialUnidad.html
@@ -104,5 +104,6 @@
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
+    <script src="js/Controllers/historialSedes.js"></script>
   </body>
 </html>
