--- a/public/reportes.html
+++ b/public/reportes.html
@@ -70,7 +70,7 @@
             class="buttons"
             onclick="window.location.href='historialUnidad.html'"
           >
-            Historial de Sede
+            Historial de Unidad
           </button>
           <button
             type="button"
